--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --main-color: #2559c9;
+  --main-color: #1890ff;
   --divider-color: #dcdcdc;
   --margin-s: 24px;
   --margin-m: 24px;
@@ -8,7 +8,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
